sync sample code
